# Web-App-with-Streamlit

./: README.md  main.py  pyproject.toml
.streamlit/: config.toml
modules/: ai_integration.py  file_processor.py
