[project]
name = "web-app-with-streamlit"
version = "0.1.0"
description = "A web app that helps users transform, clean, Filter, visualize data (CSV/Excel), and give AI-Powered Suggestions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "streamlit>=1.42.1",
]
